Add far away project, edit skills

--- a/index.html
+++ b/index.html
@@ -263,6 +263,41 @@
 						</div>
 					</div>
 
+					<div class="col-sm-12 col-md-6 col-lg-4 my-4">
+						<div class="card w-30 text-center h-100 shadow">
+							<a href="far-away-v2.vercel.app" target="_blank">
+								<img
+									src="./img/far-away-tiny.png"
+									class="card-img-top"
+									alt="far away site screenshot"
+								/>
+							</a>
+							<h5 class="class card-title my-4">Far Away</h5>
+							<div class="card-body">
+								<p class="card-text">
+									This is a single-page React application built with TypeScript
+									and Tailwind CSS. It allows users to add items and their
+									quantities to a packing list for a trip, delete items, and
+									mark them as packed. Users can also sort the list by name,
+									input order, and packed status. Local storage is used for data
+									persistence.
+								</p>
+								<p class="class card-text">
+									<strong>Skills: </strong>React, TypeScript, Tailwind CSS
+								</p>
+								<p class="class card-text">
+									<strong>Tools: </strong>Vite, Vercel, Chrome DevTools
+								</p>
+								<a
+									href="far-away-v2.vercel.app"
+									target="_blank"
+									class="btn btn-primary text-uppercase"
+									>Live Site</a
+								>
+							</div>
+						</div>
+					</div>
+
 					<!-- <div class="col-sm-12 col-md-6 col-lg-4 my-4">
 						<div class="card w-30 text-center h-100 shadow">
 							<a href="https://demo.bigccodes.com/" target="_blank">
@@ -358,12 +393,18 @@
 
 					<div class="col col-4 col-lg-1 gx-1">
 						<i class="fa-brands fa-square-js text-info display-5"></i>
-						<p class="text-light">JavaScript</p>
+						<p class="text-light flex flex-col">
+							<span> JavaScript/ </span>
+							<span> TypeScript </span>
+						</p>
 					</div>
 
 					<div class="col col-4 col-lg-1">
 						<i class="fa-brands fa-react text-info display-5"></i>
-						<p class="text-light">React</p>
+						<p class="text-light flex flex-col">
+							<span> React.js/ </span>
+							<span> Next.js </span>
+						</p>
 					</div>
 
 					<!-- <div class="col col-3 col-lg-1 gx-1">
@@ -396,7 +437,7 @@
 							class="img-fluid"
 						/> -->
 						<i class="ri-tailwind-css-fill text-info display-5"></i>
-						<p class="text-light">Tailwind</p>
+						<p class="text-light">TailwindCSS</p>
 					</div>
 
 					<div class="col col-4 col-lg-1">
