--- a/index.html
+++ b/index.html
@@ -462,22 +462,22 @@
 					class="row justify-content-center gy-3 pb-5"
 					style="color: #07105f; font-weight: bold"
 				>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>Git & the Command Line</p>
 					</div>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>FTP Client</p>
 					</div>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>Code Editors</p>
 					</div>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>Figma</p>
 					</div>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>Photoshop</p>
 					</div>
-					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
+					<div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3 rounded">
 						<p>Chrome DevTools</p>
 					</div>
 				</div>
@@ -507,15 +507,16 @@
 							</div>
 							<div class="card-body text-start">
 								<p>
-									Hi! 👋 My name is Carol Bruggeman. In a past life, I was an
-									emergency medicine physician assistant - a taxing and
-									challenging profession that laid the perfect foundation to
-									segue into a career in front-end development. You see, I am a
-									problem-solving pro, able to break down complex problems into
-									smaller, more manageable components and come up with a
-									step-by-step solution, all while attending to each challenge's
-									unique conditions. The communication and interpersonal skills
-									I developed while caring for patients in the high-pressure
+									Hi! 👋 I'm Carol - a front-end developer with an interest in
+									health tech. In a past life, I was an emergency medicine
+									physician assistant - a taxing and challenging profession that
+									laid the perfect foundation to segue into a career in
+									front-end development. You see, I am a problem-solving pro,
+									able to break down complex problems into smaller, more
+									manageable components and come up with a step-by-step
+									solution, all while attending to each challenge's unique
+									conditions. The communication and interpersonal skills I
+									developed while caring for patients in the high-pressure
 									environment of an emergency room have made me an expert in
 									client-facing solutions and allow me to thrive as a member of
 									any team. I have found that my passion lies in combining my
